--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartaxistitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartaxistitleupdatedata.yml
@@ -11,10 +11,11 @@ items:
     children:
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#format:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#text:member'
+      - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#textOrientation:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#format:member'
     summary: |-
-      表示图表坐标轴标题的格式。
+      指定图表坐标轴标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -29,7 +30,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#text:member'
     summary: |-
-      表示坐标轴标题。
+      指定轴标题。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -42,9 +43,24 @@ items:
       return:
         type:
           - string
+  - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#textOrientation:member'
+    summary: |-
+      指定文本面向图表轴标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+
+      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: textOrientation
+    fullName: textOrientation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'textOrientation?: number;'
+      return:
+        type:
+          - number
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
     summary: |-
-      指定坐标轴标题是否可见的布尔值。
+      指定轴标题是否为 shape.visibile。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
