--- a/docs/docs-ref-autogen/excel/excel/excel.chartaxistitle.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chartaxistitle.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAxisTitle#context:member'
@@ -40,7 +40,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAxisTitle#format:member'
     summary: |-
-      表示图表坐标轴标题的格式。 只读。
+      指定图表坐标轴标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -159,7 +159,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAxisTitle#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -201,7 +201,7 @@ items:
             - string
   - uid: 'excel!Excel.ChartAxisTitle#text:member'
     summary: |-
-      表示坐标轴标题。
+      指定轴标题。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -216,10 +216,9 @@ items:
           - string
   - uid: 'excel!Excel.ChartAxisTitle#textOrientation:member'
     summary: |-
-      表示文本面向图表轴标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+      指定文本面向图表轴标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -245,7 +244,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartAxisTitle#visible:member'
     summary: |-
-      指定坐标轴标题是否可见的布尔值。
+      指定轴标题是否为 shape.visibile。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -259,7 +258,7 @@ items:
         type:
           - boolean
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -271,7 +270,7 @@ references:
     name: Excel.Interfaces.ChartAxisTitleLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData:interface'
     name: Interfaces.ChartAxisTitleUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData:interface'
     name: Excel.Interfaces.ChartAxisTitleData
