--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotlayoutloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotlayoutloadoptions.yml
@@ -33,7 +33,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#autoFormat:member'
     summary: |-
-      指定是否在刷新或移动字段时自动进行格式化
+      指定在刷新或移动域时是否自动设置格式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoFormat
@@ -63,7 +63,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#preserveFormatting:member'
     summary: |-
-      指定是否在通过透视、排序或更改页面字段项等操作来刷新或重新计算报表时保留格式。
+      指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时，是否保留格式设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: preserveFormatting
@@ -78,7 +78,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showColumnGrandTotals:member'
     summary: |-
-      指定数据透视表报表是否显示列总计。
+      指定数据透视表是否显示列总计。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showColumnGrandTotals
@@ -93,7 +93,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showRowGrandTotals:member'
     summary: |-
-      指定数据透视表报表是否显示行总计。
+      指定数据透视表是否显示行的总计。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showRowGrandTotals
