--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangefillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangefillloadoptions.yml
@@ -32,7 +32,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#color:member'
     summary: |-
-      代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
+      代表表单\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -47,7 +47,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#pattern:member'
     summary: |-
-      获取或设置区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
+      区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pattern
@@ -62,7 +62,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#patternColor:member'
     summary: |-
-      设置表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。 获取表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）。
+      表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternColor
@@ -77,7 +77,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#patternTintAndShade:member'
     summary: |-
-      返回或设置一个使区域填充的图案颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 如果模式 tintAndShades 不一致，则将返回 null。
+      指定用于将区域填充的图案颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果模式 tintAndShades 不一致，则将返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternTintAndShade
@@ -92,7 +92,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#tintAndShade:member'
     summary: |-
-      返回或设置一个使区域填充的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 如果 tintAndShades 不是统一的，将返回 null。
+      指定用于将区域填充的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果 tintAndShades 不是统一的，将返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
