--- a/docs/docs-ref-autogen/excel_online/excel/excel.chartlegendentry.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.chartlegendentry.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartLegendEntry#context:member'
@@ -41,7 +41,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartLegendEntry#height:member'
     summary: |-
-      表示图表图例上的 legendEntry 的高度。
+      指定图表图例上的 legendEntry 的高度。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -56,7 +56,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartLegendEntry#index:member'
     summary: |-
-      表示图表图例中的 legendEntry 的索引。
+      指定图表图例中的 legendEntry 的索引。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
@@ -71,7 +71,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartLegendEntry#left:member'
     summary: |-
-      表示图表 legendEntry 的左侧。
+      指定图表 legendEntry 的左侧。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -171,7 +171,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartLegendEntry#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -205,7 +205,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartLegendEntry#top:member'
     summary: |-
-      表示图表 legendEntry 的顶部。
+      指定图表 legendEntry 的顶部。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -249,7 +249,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -259,7 +259,7 @@ references:
     name: Excel.Interfaces.ChartLegendEntryLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryUpdateData:interface'
     name: Interfaces.ChartLegendEntryUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryData:interface'
     name: Excel.Interfaces.ChartLegendEntryData
