--- a/docs/docs-ref-autogen/excel_online/excel/excel.chartplotarea.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.chartplotarea.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPlotArea#context:member'
@@ -45,7 +45,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPlotArea#format:member'
     summary: |-
-      表示图表 plotArea 的格式。
+      指定图表 plotArea 的格式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -60,7 +60,7 @@ items:
           - 'excel!Excel.ChartPlotAreaFormat:class'
   - uid: 'excel!Excel.ChartPlotArea#height:member'
     summary: |-
-      表示 plotArea 的高度值。
+      指定 plotArea 的高度值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -75,7 +75,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideHeight:member'
     summary: |-
-      表示 plotArea 的 insideHeight 值。
+      指定 plotArea 的 insideHeight 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideHeight
@@ -90,7 +90,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideLeft:member'
     summary: |-
-      表示 plotArea 的 insideLeft 值。
+      指定 plotArea 的 insideLeft 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideLeft
@@ -105,7 +105,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideTop:member'
     summary: |-
-      表示 plotArea 的 insideTop 值。
+      指定 plotArea 的 insideTop 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideTop
@@ -120,7 +120,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#insideWidth:member'
     summary: |-
-      表示 plotArea 的 insideWidth 值。
+      指定 plotArea 的 insideWidth 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideWidth
@@ -135,7 +135,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#left:member'
     summary: |-
-      表示 plotArea 的 left 值。
+      指定 plotArea 的左侧值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -212,7 +212,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartPlotArea#position:member'
     summary: |-
-      表示 plotArea 的位置。
+      指定 plotArea 的位置。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -250,7 +250,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPlotArea#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -284,7 +284,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartPlotArea#top:member'
     summary: |-
-      表示 plotArea 的 top 值。
+      指定 plotArea 的最高值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -299,7 +299,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartPlotArea#width:member'
     summary: |-
-      表示 plotArea 的宽度值。
+      指定 plotArea 的宽度值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -313,7 +313,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -334,7 +334,7 @@ references:
         fullName: ' | "Automatic" | "Custom"'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData:interface'
     name: Interfaces.ChartPlotAreaUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData:interface'
     name: Excel.Interfaces.ChartPlotAreaData
