commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartborder.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartborder.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartBorder:class'
     summary: |-
-      <span data-ttu-id="3fb7d-101">代表 chart 元素的边框格式。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-101">Represents the border formatting of a chart element.</span></span>
+      代表 chart 元素的边框格式。
 
-      <span data-ttu-id="3fb7d-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3fb7d-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartBorder
     fullName: Excel.ChartBorder
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartBorder#clear:member(1)'
@@ -27,9 +27,9 @@ items:
       - 'excel!Excel.ChartBorder#weight:member'
   - uid: 'excel!Excel.ChartBorder#clear:member(1)'
     summary: |-
-      <span data-ttu-id="3fb7d-103">清除图表元素的边框格式。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-103">Clear the border format of a chart element.</span></span>
+      清除图表元素的边框格式。
 
-      <span data-ttu-id="3fb7d-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3fb7d-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: clear()
     fullName: clear()
     langs:
@@ -43,9 +43,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartBorder#color:member'
     summary: |-
-      <span data-ttu-id="3fb7d-105">表示图表中的边框颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-105">HTML color code representing the color of borders in the chart.</span></span>
+      表示图表中的边框颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="3fb7d-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3fb7d-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -57,7 +57,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ChartBorder#context:member'
-    summary: <span data-ttu-id="3fb7d-107">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-107">The request context associated with the object.</span></span> <span data-ttu-id="3fb7d-108">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-108">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -70,9 +70,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartBorder#lineStyle:member'
     summary: |-
-      <span data-ttu-id="3fb7d-109">表示边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-109">Represents the line style of the border.</span></span> <span data-ttu-id="3fb7d-110">有关详细信息，请参阅 ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-110">See Excel.ChartLineStyle for details.</span></span>
+      表示边框的线条样式。 有关详细信息，请参阅 ChartLineStyle。
 
-      <span data-ttu-id="3fb7d-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3fb7d-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lineStyle
     fullName: lineStyle
     langs:
@@ -84,7 +84,7 @@ items:
         type:
           - 'excel!Excel.ChartBorder#lineStyle~0:complex'
   - uid: 'excel!Excel.ChartBorder#load:member(1)'
-    summary: <span data-ttu-id="3fb7d-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3fb7d-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -98,11 +98,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="3fb7d-114">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-114">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
   - uid: 'excel!Excel.ChartBorder#load:member(2)'
-    summary: <span data-ttu-id="3fb7d-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3fb7d-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -116,11 +116,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="3fb7d-117">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartBorder#load:member(3)'
-    summary: <span data-ttu-id="3fb7d-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3fb7d-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -138,7 +138,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="3fb7d-120">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-120">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -146,9 +146,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ChartBorder#set:member(1)'
-    summary: '<span data-ttu-id="3fb7d-121">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-121">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="3fb7d-122">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-122">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="3fb7d-123">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="3fb7d-123">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartBorder): void`
     name: 'set(properties, options)'
@@ -164,15 +164,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="3fb7d-124">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-124">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartBorderUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="3fb7d-125">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-125">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartBorder#set:member(2)'
-    summary: '<span data-ttu-id="3fb7d-126">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-126">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -190,7 +190,7 @@ items:
           type:
             - 'excel!Excel.ChartBorder:class'
   - uid: 'excel!Excel.ChartBorder#toJSON:member(1)'
-    summary: '<span data-ttu-id="3fb7d-127">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="3fb7d-127">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="3fb7d-128">.</span><span class="sxs-lookup"><span data-stu-id="3fb7d-128"></span></span> <span data-ttu-id="3fb7d-129">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="3fb7d-129"></span></span><!-- --><span data-ttu-id="3fb7d-130">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBorder 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBorderData`</span><span class="sxs-lookup"><span data-stu-id="3fb7d-130">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartBorder object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartBorderData`</span></span><!-- --><span data-ttu-id="3fb7d-131">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-131">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBorder 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBorderData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -204,9 +204,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartBorder#weight:member'
     summary: |-
-      <span data-ttu-id="3fb7d-132">表示边框的粗细，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="3fb7d-132">Represents weight of the border, in points.</span></span>
+      表示边框的粗细，以磅为单位。
 
-      <span data-ttu-id="3fb7d-133">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3fb7d-133">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
@@ -218,7 +218,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -237,7 +237,7 @@ references:
     name: Excel.Interfaces.ChartBorderLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartBorderUpdateData:interface'
     name: Interfaces.ChartBorderUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartBorderData:interface'
     name: Excel.Interfaces.ChartBorderData
