--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotlayoutloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotlayoutloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="254b8-101">表示数据透视表的可视化布局。</span><span class="sxs-lookup"><span data-stu-id="254b8-101">Represents the visual layout of the PivotTable.</span></span>
+      表示数据透视表的可视化布局。
 
-      <span data-ttu-id="254b8-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="254b8-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.PivotLayoutLoadOptions
     fullName: Excel.Interfaces.PivotLayoutLoadOptions
     langs:
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showRowGrandTotals:member'
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#subtotalLocation:member'
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#$all:member'
-    summary: '<span data-ttu-id="254b8-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="254b8-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="254b8-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="254b8-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="254b8-105">).</span><span class="sxs-lookup"><span data-stu-id="254b8-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#autoFormat:member'
     summary: |-
-      <span data-ttu-id="254b8-106">指定是否在刷新或移动字段时自动进行格式化</span><span class="sxs-lookup"><span data-stu-id="254b8-106">Specifies whether formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
+      指定在刷新或移动域时是否自动设置格式。
 
-      <span data-ttu-id="254b8-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="254b8-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoFormat
     fullName: autoFormat
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#layoutType:member'
     summary: |-
-      <span data-ttu-id="254b8-108">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="254b8-108">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="254b8-109">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="254b8-109">If fields have different states, this will be null.</span></span>
+      此属性指示数据透视表上的所有字段的 PivotLayoutType。 如果字段状态不同，则为 null。
 
-      <span data-ttu-id="254b8-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="254b8-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: layoutType
     fullName: layoutType
     langs:
@@ -63,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#preserveFormatting:member'
     summary: |-
-      <span data-ttu-id="254b8-111">指定是否在通过透视、排序或更改页面字段项等操作来刷新或重新计算报表时保留格式。</span><span class="sxs-lookup"><span data-stu-id="254b8-111">Specifies whether formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
+      指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时，是否保留格式设置。
 
-      <span data-ttu-id="254b8-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="254b8-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: preserveFormatting
     fullName: preserveFormatting
     langs:
@@ -78,9 +78,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showColumnGrandTotals:member'
     summary: |-
-      <span data-ttu-id="254b8-113">指定数据透视表报表是否显示列总计。</span><span class="sxs-lookup"><span data-stu-id="254b8-113">Specifies whether the PivotTable report shows grand totals for columns.</span></span>
+      指定数据透视表是否显示列总计。
 
-      <span data-ttu-id="254b8-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="254b8-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showColumnGrandTotals
     fullName: showColumnGrandTotals
     langs:
@@ -93,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showRowGrandTotals:member'
     summary: |-
-      <span data-ttu-id="254b8-115">指定数据透视表报表是否显示行总计。</span><span class="sxs-lookup"><span data-stu-id="254b8-115">Specifies whether the PivotTable report shows grand totals for rows.</span></span>
+      指定数据透视表是否显示行的总计。
 
-      <span data-ttu-id="254b8-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="254b8-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showRowGrandTotals
     fullName: showRowGrandTotals
     langs:
@@ -108,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#subtotalLocation:member'
     summary: |-
-      <span data-ttu-id="254b8-117">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="254b8-117">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="254b8-118">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="254b8-118">If fields have different states, this will be null.</span></span>
+      此属性指示数据透视表上的所有字段的 SubtotalLocationType。 如果字段状态不同，则为 null。
 
-      <span data-ttu-id="254b8-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="254b8-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subtotalLocation
     fullName: subtotalLocation
     langs:
