--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotlayoutupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotlayoutupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData:interface'
-    summary: '<span data-ttu-id="8c625-101">一个用于更新 PivotLayout 对象上的数据的接口，可用于`pivotLayout.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="8c625-101">An interface for updating data on the PivotLayout object, for use in `pivotLayout.set({ ... })`</span></span><!-- --><span data-ttu-id="8c625-102">.</span><span class="sxs-lookup"><span data-stu-id="8c625-102"></span></span>'
+    summary: '一个用于更新 PivotLayout 对象上的数据的接口，可用于`pivotLayout.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PivotLayoutUpdateData
     fullName: Excel.Interfaces.PivotLayoutUpdateData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation:member'
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#autoFormat:member'
     summary: |-
-      <span data-ttu-id="8c625-103">指定是否在刷新或移动字段时自动进行格式化</span><span class="sxs-lookup"><span data-stu-id="8c625-103">Specifies whether formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
+      指定在刷新或移动域时是否自动设置格式。
 
-      <span data-ttu-id="8c625-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c625-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoFormat
     fullName: autoFormat
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType:member'
     summary: |-
-      <span data-ttu-id="8c625-105">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="8c625-105">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="8c625-106">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="8c625-106">If fields have different states, this will be null.</span></span>
+      此属性指示数据透视表上的所有字段的 PivotLayoutType。 如果字段状态不同，则为 null。
 
-      <span data-ttu-id="8c625-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c625-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: layoutType
     fullName: layoutType
     langs:
@@ -47,9 +47,9 @@ items:
           - 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#preserveFormatting:member'
     summary: |-
-      <span data-ttu-id="8c625-108">指定是否在通过透视、排序或更改页面字段项等操作来刷新或重新计算报表时保留格式。</span><span class="sxs-lookup"><span data-stu-id="8c625-108">Specifies whether formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
+      指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时，是否保留格式设置。
 
-      <span data-ttu-id="8c625-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c625-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: preserveFormatting
     fullName: preserveFormatting
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#showColumnGrandTotals:member'
     summary: |-
-      <span data-ttu-id="8c625-110">指定数据透视表报表是否显示列总计。</span><span class="sxs-lookup"><span data-stu-id="8c625-110">Specifies whether the PivotTable report shows grand totals for columns.</span></span>
+      指定数据透视表是否显示列总计。
 
-      <span data-ttu-id="8c625-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c625-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showColumnGrandTotals
     fullName: showColumnGrandTotals
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#showRowGrandTotals:member'
     summary: |-
-      <span data-ttu-id="8c625-112">指定数据透视表报表是否显示行总计。</span><span class="sxs-lookup"><span data-stu-id="8c625-112">Specifies whether the PivotTable report shows grand totals for rows.</span></span>
+      指定数据透视表是否显示行的总计。
 
-      <span data-ttu-id="8c625-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c625-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showRowGrandTotals
     fullName: showRowGrandTotals
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation:member'
     summary: |-
-      <span data-ttu-id="8c625-114">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="8c625-114">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="8c625-115">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="8c625-115">If fields have different states, this will be null.</span></span>
+      此属性指示数据透视表上的所有字段的 SubtotalLocationType。 如果字段状态不同，则为 null。
 
-      <span data-ttu-id="8c625-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8c625-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subtotalLocation
     fullName: subtotalLocation
     langs:
