--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangefillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangefillloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="f32c4-101">表示 range 对象的背景。</span><span class="sxs-lookup"><span data-stu-id="f32c4-101">Represents the background of a range object.</span></span>
+      表示 range 对象的背景。
 
-      <span data-ttu-id="f32c4-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f32c4-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.RangeFillLoadOptions
     fullName: Excel.Interfaces.RangeFillLoadOptions
     langs:
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.RangeFillLoadOptions#patternTintAndShade:member'
       - 'excel!Excel.Interfaces.RangeFillLoadOptions#tintAndShade:member'
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#$all:member'
-    summary: '<span data-ttu-id="f32c4-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="f32c4-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="f32c4-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="f32c4-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="f32c4-105">).</span><span class="sxs-lookup"><span data-stu-id="f32c4-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="f32c4-106">代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="f32c4-106">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+      代表表单\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
 
-      <span data-ttu-id="f32c4-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f32c4-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#pattern:member'
     summary: |-
-      <span data-ttu-id="f32c4-108">获取或设置区域的图案。</span><span class="sxs-lookup"><span data-stu-id="f32c4-108">Gets or sets the pattern of a Range.</span></span> <span data-ttu-id="f32c4-109">有关详细信息，请参阅 Excel.FillPattern。</span><span class="sxs-lookup"><span data-stu-id="f32c4-109">See Excel.FillPattern for details.</span></span> <span data-ttu-id="f32c4-110">不支持 LinearGradient 和 RectangularGradient。</span><span class="sxs-lookup"><span data-stu-id="f32c4-110">LinearGradient and RectangularGradient are not supported.</span></span> <span data-ttu-id="f32c4-111">如果为 null 值，则表示整个区域没有统一的模式设置。</span><span class="sxs-lookup"><span data-stu-id="f32c4-111">A null value indicates that the entire range doesn't have uniform pattern setting.</span></span>
+      区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
 
-      <span data-ttu-id="f32c4-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f32c4-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pattern
     fullName: pattern
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#patternColor:member'
     summary: |-
-      <span data-ttu-id="f32c4-113">设置表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="f32c4-113">Sets HTML color code representing the color of the Range pattern, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="f32c4-114">获取表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）。</span><span class="sxs-lookup"><span data-stu-id="f32c4-114">Gets HTML color code representing the color of the Range pattern, of the form \#RRGGBB (e.g. "FFA500").</span></span>
+      表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
 
-      <span data-ttu-id="f32c4-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f32c4-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternColor
     fullName: patternColor
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#patternTintAndShade:member'
     summary: |-
-      <span data-ttu-id="f32c4-116">返回或设置一个使区域填充的图案颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="f32c4-116">Returns or sets a double that lightens or darkens a pattern color for Range Fill, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="f32c4-117">如果模式 tintAndShades 不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="f32c4-117">If the pattern tintAndShades are not uniform, null will be returned.</span></span>
+      指定用于将区域填充的图案颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果模式 tintAndShades 不一致，则将返回 null。
 
-      <span data-ttu-id="f32c4-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f32c4-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFillLoadOptions#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="f32c4-119">返回或设置一个使区域填充的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="f32c4-119">Returns or sets a double that lightens or darkens a color for Range Fill, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="f32c4-120">如果 tintAndShades 不是统一的，将返回 null。</span><span class="sxs-lookup"><span data-stu-id="f32c4-120">If the tintAndShades are not uniform, null will be returned.</span></span>
+      指定用于将区域填充的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果 tintAndShades 不是统一的，将返回 null。
 
-      <span data-ttu-id="f32c4-121">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f32c4-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
