commit translated contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.workbookdata.yml
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
   - uid: 'excel!Excel.Interfaces.WorkbookData#bindings:member'
     summary: |-
-      表示属于工作簿的绑定的集合。 只读。
+      表示属于工作簿的绑定的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
@@ -37,7 +37,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#bindings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#customXmlParts:member'
     summary: |-
-      表示此工作簿包含的自定义 XML 部件的集合。 只读。
+      表示此工作簿包含的自定义 XML 部件的集合。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customXmlParts
@@ -52,7 +52,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#customXmlParts~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#name:member'
     summary: |-
-      获取工作簿名称。 只读。
+      获取工作簿名称。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -67,7 +67,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorkbookData#names:member'
     summary: |-
-      表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
+      表示工作簿范围内的已命名项目（称为区域和常量）的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -82,7 +82,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#names~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#pivotTables:member'
     summary: |-
-      表示一组与 workbook 相关联的 PivotTable 对象。 只读。
+      表示一组与 workbook 相关联的 PivotTable 对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -97,7 +97,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#pivotTables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#properties:member'
     summary: |-
-      获取工作簿属性。 只读。
+      获取工作簿属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
@@ -112,7 +112,7 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#protection:member'
     summary: |-
-      返回工作簿的工作簿保护对象。 只读。
+      返回工作簿的保护对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -127,7 +127,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#settings:member'
     summary: |-
-      表示一组与 workbook 相关联的 setting 对象。 只读。
+      表示一组与 workbook 相关联的 setting 对象。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
@@ -142,7 +142,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#settings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#styles:member'
     summary: |-
-      表示与工作簿关联的样式的集合。 只读。
+      表示与工作簿关联的样式的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: styles
@@ -157,7 +157,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#styles~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#tables:member'
     summary: |-
-      表示与工作簿关联的表的集合。 只读。
+      表示与工作簿关联的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
@@ -172,7 +172,7 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#tables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
     summary: |-
-      表示与工作簿关联的工作表的集合。 只读。
+      表示与工作簿关联的工作表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
