--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdatalabelsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartdatalabelsupdatedata.yml
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#verticalAlignment:member'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#autoText:member'
     summary: |-
-      表示数据标签是否根据上下文自动生成相应的文本。
+      指定数据标签是否根据上下文自动生成相应的文本。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
@@ -40,7 +40,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#format:member'
     summary: |-
-      表示图表数据标签的格式，包括填充和字体格式。
+      指定图表数据标签的格式，其中包括填充和字体格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -55,7 +55,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#horizontalAlignment:member'
     summary: |-
-      表示图表数据标签水平对齐。 有关详细信息，请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的数据标签为0时，此属性才有效。
+      指定图表数据标签的水平对齐方式。 有关详细信息，请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的数据标签为0时，此属性才有效。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
@@ -70,7 +70,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#numberFormat:member'
     summary: |-
-      表示数据标签的格式代码。
+      指定数据标签的格式代码。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
@@ -115,7 +115,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#showBubbleSize:member'
     summary: |-
-      该布尔值表示数据标签气泡大小是否可见。
+      指定数据标签气泡大小是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBubbleSize
@@ -130,7 +130,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#showCategoryName:member'
     summary: |-
-      表示数据标签分类名称是否可见的布尔值。
+      指定数据标签类别名称是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showCategoryName
@@ -145,7 +145,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#showLegendKey:member'
     summary: |-
-      该布尔值表示数据标签图例标示是否可见。
+      指定数据标签图例标示是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendKey
@@ -160,7 +160,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#showPercentage:member'
     summary: |-
-      该布尔值表示数据标签百分比是否可见。
+      指定数据标签百分比是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPercentage
@@ -175,7 +175,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#showSeriesName:member'
     summary: |-
-      该布尔值表示数据标签系列名称是否可见。
+      指定数据标签系列名称是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showSeriesName
@@ -190,7 +190,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData#showValue:member'
     summary: |-
-      该布尔值表示数据标签值是否可见。
+      指定数据标签值是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValue
