--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shape.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shape.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Shape#altTextDescription:member'
@@ -61,7 +61,7 @@ items:
       - 'excel!Excel.Shape#zOrderPosition:member'
   - uid: 'excel!Excel.Shape#altTextDescription:member'
     summary: |-
-      返回或设置形状对象的可选说明文本。
+      指定 Shape 对象的替代说明文本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextDescription
@@ -76,7 +76,7 @@ items:
           - string
   - uid: 'excel!Excel.Shape#altTextTitle:member'
     summary: |-
-      返回或设置形状对象的可选标题文本。
+      为 Shape 对象指定可选的标题文本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextTitle
@@ -91,7 +91,7 @@ items:
           - string
   - uid: 'excel!Excel.Shape#connectionSiteCount:member'
     summary: |-
-      返回此形状上的连接站点数。 只读。
+      返回此形状上的连接站点数。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: connectionSiteCount
@@ -154,7 +154,7 @@ items:
           ```
   - uid: 'excel!Excel.Shape#fill:member'
     summary: |-
-      返回此形状的填充格式。 只读。
+      返回此形状的填充格式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -202,7 +202,7 @@ items:
           - 'excel!Excel.GeometricShape:class'
   - uid: 'excel!Excel.Shape#geometricShapeType:member'
     summary: |-
-      表示此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
+      指定此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: geometricShapeType
@@ -308,7 +308,7 @@ items:
           ```
   - uid: 'excel!Excel.Shape#height:member'
     summary: |-
-      表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
+      指定形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -323,7 +323,7 @@ items:
           - number
   - uid: 'excel!Excel.Shape#id:member'
     summary: |-
-      表示形状标识符。 只读。
+      指定形状标识符。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -470,7 +470,7 @@ items:
           - number
   - uid: 'excel!Excel.Shape#level:member'
     summary: |-
-      表示指定形状的级别。 例如，级别 0 表示形状不是任何组的一部分，级别 1 表示形状是顶级组的一部分，级别 2 表示形状是顶级子组的一部分。
+      指定指定形状的级别。 例如，级别 0 表示形状不是任何组的一部分，级别 1 表示形状是顶级组的一部分，级别 2 表示形状是顶级子组的一部分。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: level
@@ -521,7 +521,7 @@ items:
           ```
   - uid: 'excel!Excel.Shape#lineFormat:member'
     summary: |-
-      返回此形状的线条格式。 只读。
+      返回此形状的线条格式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lineFormat
@@ -598,7 +598,7 @@ items:
                       }
   - uid: 'excel!Excel.Shape#lockAspectRatio:member'
     summary: |-
-      指定此形状的纵横比是否锁定。
+      指定此形状的纵横比是否已锁定。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lockAspectRatio
@@ -628,7 +628,7 @@ items:
           ```
   - uid: 'excel!Excel.Shape#name:member'
     summary: |-
-      表示形状的名称。
+      指定形状的名称。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -673,7 +673,7 @@ items:
           - 'excel!Excel.Shape#onDeactivated~0:complex'
   - uid: 'excel!Excel.Shape#parentGroup:member'
     summary: |-
-      表示此形状的父组。
+      指定此形状的父组。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: parentGroup
@@ -688,7 +688,7 @@ items:
           - 'excel!Excel.Shape:class'
   - uid: 'excel!Excel.Shape#rotation:member'
     summary: |-
-      表示形状的旋转度数。
+      指定形状的旋转角度（以度为单位）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rotation
@@ -875,7 +875,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Shape#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -994,7 +994,7 @@ items:
           - number
   - uid: 'excel!Excel.Shape#type:member'
     summary: |-
-      返回此形状的类型。 有关详细信息，请参阅 Excel.ShapeType。 只读。
+      返回此形状的类型。 有关详细信息，请参阅 Excel.ShapeType。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -1009,7 +1009,7 @@ items:
           - 'excel!Excel.Shape#type~0:complex'
   - uid: 'excel!Excel.Shape#visible:member'
     summary: |-
-      表示此形状的可视性。
+      指定形状是否可见。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -1024,7 +1024,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Shape#width:member'
     summary: |-
-      表示形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
+      指定形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -1039,7 +1039,7 @@ items:
           - number
   - uid: 'excel!Excel.Shape#zOrderPosition:member'
     summary: |-
-      返回指定形状在 z 顺序中的位置，0 表示顺序堆栈的底部。 只读。
+      返回指定形状在 z 顺序中的位置，0 表示顺序堆栈的底部。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: zOrderPosition
@@ -1053,7 +1053,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -1074,7 +1074,7 @@ references:
     name: OfficeExtension.ClientResult<string>
     fullName: OfficeExtension.ClientResult<string>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <string>
@@ -1085,7 +1085,7 @@ references:
     name: OfficeExtension.ClientResult<string>
     fullName: OfficeExtension.ClientResult<string>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <string>
@@ -1106,7 +1106,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.ShapeActivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.ShapeActivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1120,7 +1120,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.ShapeDeactivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.ShapeDeactivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1136,7 +1136,7 @@ references:
     name: Excel.ShapeScaleFrom
   - uid: 'excel!Excel.Interfaces.ShapeUpdateData:interface'
     name: Interfaces.ShapeUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.ShapeZOrder:enum'
     name: Excel.ShapeZOrder
