--- a/docs/docs-ref-autogen/excel_1_11/excel/excel.chartformatstring.yml
+++ b/docs/docs-ref-autogen/excel_1_11/excel/excel.chartformatstring.yml
@@ -1,12 +1,12 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: 'excel!Excel.ChartGridlinesFormat:class'
+  - uid: 'excel!Excel.ChartFormatString:class'
     summary: |-
-      封装图表网格线的格式属性。
+      表示与图表相关的对象中包含文本的子字符串，如 ChartTitle 对象、ChartAxisTitle 对象等。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ChartGridlinesFormat
-    fullName: Excel.ChartGridlinesFormat
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.ChartFormatString
+    fullName: Excel.ChartFormatString
     langs:
       - typeScript
     type: class
@@ -14,15 +14,15 @@ items:
       - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
-      - 'excel!Excel.ChartGridlinesFormat#context:member'
-      - 'excel!Excel.ChartGridlinesFormat#line:member'
-      - 'excel!Excel.ChartGridlinesFormat#load:member(1)'
-      - 'excel!Excel.ChartGridlinesFormat#load:member(2)'
-      - 'excel!Excel.ChartGridlinesFormat#load:member(3)'
-      - 'excel!Excel.ChartGridlinesFormat#set:member(1)'
-      - 'excel!Excel.ChartGridlinesFormat#set:member(2)'
-      - 'excel!Excel.ChartGridlinesFormat#toJSON:member(1)'
-  - uid: 'excel!Excel.ChartGridlinesFormat#context:member'
+      - 'excel!Excel.ChartFormatString#context:member'
+      - 'excel!Excel.ChartFormatString#font:member'
+      - 'excel!Excel.ChartFormatString#load:member(1)'
+      - 'excel!Excel.ChartFormatString#load:member(2)'
+      - 'excel!Excel.ChartFormatString#load:member(3)'
+      - 'excel!Excel.ChartFormatString#set:member(1)'
+      - 'excel!Excel.ChartFormatString#set:member(2)'
+      - 'excel!Excel.ChartFormatString#toJSON:member(1)'
+  - uid: 'excel!Excel.ChartFormatString#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -34,22 +34,22 @@ items:
       return:
         type:
           - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.ChartGridlinesFormat#line:member'
+  - uid: 'excel!Excel.ChartFormatString#font:member'
     summary: |-
-      表示图表线条格式。
+      代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: line
-    fullName: line
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: font
+    fullName: font
     langs:
       - typeScript
     type: property
     syntax:
-      content: 'readonly line: Excel.ChartLineFormat;'
+      content: 'readonly font: Excel.ChartFont;'
       return:
         type:
-          - 'excel!Excel.ChartLineFormat:class'
-  - uid: 'excel!Excel.ChartGridlinesFormat#load:member(1)'
+          - 'excel!Excel.ChartFont:class'
+  - uid: 'excel!Excel.ChartFormatString#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
@@ -57,17 +57,17 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'load(options?: Excel.Interfaces.ChartGridlinesFormatLoadOptions): Excel.ChartGridlinesFormat;'
+      content: 'load(options?: Excel.Interfaces.ChartFormatStringLoadOptions): Excel.ChartFormatString;'
       return:
         type:
-          - 'excel!Excel.ChartGridlinesFormat:class'
+          - 'excel!Excel.ChartFormatString:class'
         description: ''
       parameters:
         - id: options
           description: 提供要加载的对象的属性的选项。
           type:
-            - 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions:interface'
-  - uid: 'excel!Excel.ChartGridlinesFormat#load:member(2)'
+            - 'excel!Excel.Interfaces.ChartFormatStringLoadOptions:interface'
+  - uid: 'excel!Excel.ChartFormatString#load:member(2)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -75,17 +75,17 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.ChartGridlinesFormat;'
+      content: 'load(propertyNames?: string | string[]): Excel.ChartFormatString;'
       return:
         type:
-          - 'excel!Excel.ChartGridlinesFormat:class'
+          - 'excel!Excel.ChartFormatString:class'
         description: ''
       parameters:
         - id: propertyNames
           description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: 'excel!Excel.ChartGridlinesFormat#load:member(3)'
+  - uid: 'excel!Excel.ChartFormatString#load:member(3)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
@@ -97,10 +97,10 @@ items:
         load(propertyNamesAndPaths?: {
                     select?: string;
                     expand?: string;
-                }): Excel.ChartGridlinesFormat;
+                }): Excel.ChartFormatString;
       return:
         type:
-          - 'excel!Excel.ChartGridlinesFormat:class'
+          - 'excel!Excel.ChartFormatString:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
@@ -111,19 +111,19 @@ items:
                           select?: string;
                           expand?: string;
                       }
-  - uid: 'excel!Excel.ChartGridlinesFormat#set:member(1)'
+  - uid: 'excel!Excel.ChartFormatString#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
       此方法具有以下附加签名：
 
-      `set(properties: Excel.ChartGridlinesFormat): void`
+      `set(properties: Excel.ChartFormatString): void`
     name: 'set(properties, options)'
     fullName: 'set(properties, options)'
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'set(properties: Interfaces.ChartGridlinesFormatUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+      content: 'set(properties: Interfaces.ChartFormatStringUpdateData, options?: OfficeExtension.UpdateOptions): void;'
       return:
         type:
           - void
@@ -132,12 +132,12 @@ items:
         - id: properties
           description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - 'excel!Excel.Interfaces.ChartGridlinesFormatUpdateData:interface'
+            - 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
             - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.ChartGridlinesFormat#set:member(2)'
+  - uid: 'excel!Excel.ChartFormatString#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -145,7 +145,7 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'set(properties: Excel.ChartGridlinesFormat): void;'
+      content: 'set(properties: Excel.ChartFormatString): void;'
       return:
         type:
           - void
@@ -154,34 +154,34 @@ items:
         - id: properties
           description: ''
           type:
-            - 'excel!Excel.ChartGridlinesFormat:class'
-  - uid: 'excel!Excel.ChartGridlinesFormat#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartGridlinesFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartGridlinesFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+            - 'excel!Excel.ChartFormatString:class'
+  - uid: 'excel!Excel.ChartFormatString#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartFormatString 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartFormatStringData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'toJSON(): Excel.Interfaces.ChartGridlinesFormatData;'
+      content: 'toJSON(): Excel.Interfaces.ChartFormatStringData;'
       return:
         type:
-          - 'excel!Excel.Interfaces.ChartGridlinesFormatData:interface'
+          - 'excel!Excel.Interfaces.ChartFormatStringData:interface'
         description: ''
 references:
   - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
-  - uid: 'excel!Excel.ChartLineFormat:class'
-    name: Excel.ChartLineFormat
-  - uid: 'excel!Excel.ChartGridlinesFormat:class'
-    name: Excel.ChartGridlinesFormat
-  - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions:interface'
-    name: Excel.Interfaces.ChartGridlinesFormatLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatUpdateData:interface'
-    name: Interfaces.ChartGridlinesFormatUpdateData
+  - uid: 'excel!Excel.ChartFont:class'
+    name: Excel.ChartFont
+  - uid: 'excel!Excel.ChartFormatString:class'
+    name: Excel.ChartFormatString
+  - uid: 'excel!Excel.Interfaces.ChartFormatStringLoadOptions:interface'
+    name: Excel.Interfaces.ChartFormatStringLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
+    name: Interfaces.ChartFormatStringUpdateData
   - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.Interfaces.ChartGridlinesFormatData:interface'
-    name: Excel.Interfaces.ChartGridlinesFormatData
+  - uid: 'excel!Excel.Interfaces.ChartFormatStringData:interface'
+    name: Excel.Interfaces.ChartFormatStringData
