--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartareaformat.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartareaformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAreaFormat#border:member'
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.ChartAreaFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartAreaFormat#border:member'
     summary: |-
-      代表图表区域的边框格式，包括颜色、linestyle 和粗细。 只读。
+      代表图表区域的边框格式，包括颜色、linestyle 和粗细。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -53,7 +53,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAreaFormat#fill:member'
     summary: |-
-      表示对象的填充格式，包括背景格式信息。 只读。
+      表示对象的填充格式，包括背景格式信息。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -68,7 +68,7 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartAreaFormat#font:member'
     summary: |-
-      表示当前对象的字体属性（字体名称、字体大小、颜色等）。 只读。
+      表示当前对象的字体属性（字体名称、字体大小、颜色等）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -168,7 +168,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAreaFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -217,7 +217,7 @@ references:
     name: Excel.Interfaces.ChartAreaFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
     name: Interfaces.ChartAreaFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
     name: Excel.Interfaces.ChartAreaFormatData
