--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttrendlinelabelformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttrendlinelabelformatloadoptions.yml
@@ -29,7 +29,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions#border:member'
     summary: |-
-      表示边框格式，包括颜色、线条样式和粗细。
+      指定边框格式，包括颜色、linestyle 和粗细。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -44,7 +44,7 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions#font:member'
     summary: |-
-      表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。
+      指定图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
