--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemcollectionloadoptions.yml
@@ -76,7 +76,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemCollectionLoadOptions#visible:member'
     summary: |-
-      对于集合中的每一项：确定 PivotItem 是否可见。
+      对于集合中的每一项：指定 PivotItem 是否可见。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
