commit translated contents

--- a/docs/docs-ref-autogen/excel_1_8/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_8/toc.yml
@@ -226,7 +226,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: 应用程序
+          - name: Application
             uid: 'excel!Excel.Application:class'
           - name: BasicDataValidation
             uid: 'excel!Excel.BasicDataValidation:interface'
@@ -324,10 +324,6 @@ items:
             uid: 'excel!Excel.ChartTrendlineLabelFormat:class'
           - name: ColorScaleConditionalFormat
             uid: 'excel!Excel.ColorScaleConditionalFormat:class'
-          - name: CommentMention
-            uid: 'excel!Excel.CommentMention:interface'
-          - name: CommentRichContent
-            uid: 'excel!Excel.CommentRichContent:interface'
           - name: ConditionalCellValueRule
             uid: 'excel!Excel.ConditionalCellValueRule:interface'
           - name: ConditionalColorScaleCriteria
@@ -398,7 +394,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选
+          - name: 筛选器
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -660,7 +656,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -736,7 +732,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
