--- a/docs/docs-ref-autogen/excel/excel/excel.commentreply.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.commentreply.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.CommentReply#authorEmail:member'
@@ -66,7 +66,7 @@ items:
           - string
   - uid: 'excel!Excel.CommentReply#content:member'
     summary: |-
-      获取或设置批注回复的内容。 字符串为纯文本。
+      批注答复的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -101,7 +101,7 @@ items:
           ```
   - uid: 'excel!Excel.CommentReply#contentType:member'
     summary: |-
-      获取注释的内容类型。
+      答复的内容类型。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -206,7 +206,7 @@ items:
         description: ''
   - uid: 'excel!Excel.CommentReply#id:member'
     summary: |-
-      表示批注回复标识符。 只读。
+      指定批注答复标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -283,9 +283,9 @@ items:
                       }
   - uid: 'excel!Excel.CommentReply#mentions:member'
     summary: |-
-      获取注释中提到的实体（如人员）。
+      注释中提到的实体（例如，人员）。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: mentions
     fullName: mentions
     langs:
@@ -298,10 +298,9 @@ items:
           - 'excel!Excel.CommentReply#mentions~0:complex'
   - uid: 'excel!Excel.CommentReply#resolved:member'
     summary: |-
-      获取或设置批注答复状态。 值为 "true" 表示批注答复处于 "已解决" 状态。
+      批注答复状态。 值为 "true" 表示答复处于 "已解决" 状态。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: resolved
     fullName: resolved
     langs:
@@ -314,9 +313,9 @@ items:
           - boolean
   - uid: 'excel!Excel.CommentReply#richContent:member'
     summary: |-
-      获取丰富的注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
+      丰富的注释内容（例如，注释中提到的内容）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: richContent
     fullName: richContent
     langs:
@@ -352,7 +351,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.CommentReply#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -388,7 +387,7 @@ items:
     summary: |-
       使用特殊格式的字符串和提及列表更新注释内容。
 
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: updateMentions(contentWithMentions)
     fullName: updateMentions(contentWithMentions)
     langs:
@@ -406,7 +405,7 @@ items:
           type:
             - 'excel!Excel.CommentRichContent:interface'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.CommentReply#contentType~0:complex'
     name: Excel.ContentType | "Plain" | "Mention"
@@ -440,7 +439,7 @@ references:
         fullName: '[]'
   - uid: 'excel!Excel.Interfaces.CommentReplyUpdateData:interface'
     name: Interfaces.CommentReplyUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.CommentReplyData:interface'
     name: Excel.Interfaces.CommentReplyData
