--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartseries.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartseries.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartSeries#axisGroup:member'
@@ -52,7 +52,7 @@ items:
       - 'excel!Excel.ChartSeries#varyByCategories:member'
   - uid: 'excel!Excel.ChartSeries#axisGroup:member'
     summary: |-
-      返回或设置指定系列的组。 读/写
+      指定指定系列的组。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
@@ -162,7 +162,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeries#explosion:member'
     summary: |-
-      返回或设置饼图或圆环图切片的分解程度值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。 读/写。
+      指定饼图或圆环图切片的爆炸值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: explosion
@@ -177,7 +177,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeries#filtered:member'
     summary: |-
-      该布尔值表示是否筛选系列。 不适用于曲面图。
+      指定是否筛选系列。 不适用于曲面图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
@@ -192,7 +192,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartSeries#firstSliceAngle:member'
     summary: |-
-      返回或设置第一个饼图或圆环图切片的角度，以度为单位（从垂直方向起为顺时针）。 只适用于饼图、三维饼图和圆环图。 可以是 0 到 360 之间的值。 读/写
+      指定第一个饼图或圆环图的扇区的角度（以度为单位（从垂直方向顺时针方向）。 只适用于饼图、三维饼图和圆环图。 可以是0到360之间的值。指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstSliceAngle
@@ -207,7 +207,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeries#format:member'
     summary: |-
-      表示图表系列的格式，包括填充和线条格式。 只读。
+      表示图表系列的格式，包括填充和线条格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -237,7 +237,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeries#hasDataLabels:member'
     summary: |-
-      该布尔值表示系列是否具有数据标签。
+      指定该系列是否具有数据标签。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
@@ -252,7 +252,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartSeries#invertIfNegative:member'
     summary: |-
-      如果 Excel 在值为负数时反转项目中的图案，则为 True。 读/写。
+      如此如果当 Excel 中的模式与一个负数相对应时反转该模式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: invertIfNegative
@@ -348,7 +348,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartSeries#markerBackgroundColor:member'
     summary: |-
-      表示图表系列的标记背景色。
+      指定图表系列的标记背景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -398,7 +398,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartSeries#markerForegroundColor:member'
     summary: |-
-      表示图表系列的标记前景色。
+      指定图表系列的标记前景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -448,7 +448,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartSeries#markerSize:member'
     summary: |-
-      表示图表系列的标记大小。
+      指定图表系列的标记大小。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
@@ -498,7 +498,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartSeries#markerStyle:member'
     summary: |-
-      表示图表系列的标记类型。 有关详细信息，请参阅 ChartMarkerStyle。
+      指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
@@ -548,7 +548,7 @@ items:
           ```
   - uid: 'excel!Excel.ChartSeries#name:member'
     summary: |-
-      表示图表中某个系列的名称。
+      指定图表中系列的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -563,7 +563,7 @@ items:
           - string
   - uid: 'excel!Excel.ChartSeries#overlap:member'
     summary: |-
-      指定条柱的摆放方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。 读/写。
+      指定条柱的摆放方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlap
@@ -578,7 +578,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeries#plotOrder:member'
     summary: |-
-      表示图表组中某个图表系列的绘制顺序。
+      指定图表系列在图表组中的绘制顺序。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
@@ -593,7 +593,7 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeries#points:member'
     summary: |-
-      表示系列中所有数据点的集合。 只读。
+      返回系列中所有数据点的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: points
@@ -608,7 +608,7 @@ items:
           - 'excel!Excel.ChartPointsCollection:class'
   - uid: 'excel!Excel.ChartSeries#secondPlotSize:member'
     summary: |-
-      返回或设置复合饼图或复合条饼图的辅助分区的大小，以占主饼图大小的百分比表示。 可以是 5 到 200 之间的值。 读/写。
+      指定复合饼图或复合条饼图中的第二部分的大小（以主饼图大小的百分比表示）。 可以是 5 到 200 之间的值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: secondPlotSize
@@ -646,7 +646,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartSeries#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -730,7 +730,7 @@ items:
             - 'excel!Excel.Range:class'
   - uid: 'excel!Excel.ChartSeries#setXAxisValues:member(1)'
     summary: |-
-      设置图表系列 X 轴的值。 仅适用于散点图。
+      设置图表系列的 X 轴的值。 仅适用于散点图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: setXAxisValues(sourceData)
@@ -751,7 +751,7 @@ items:
             - 'excel!Excel.Range:class'
   - uid: 'excel!Excel.ChartSeries#showShadow:member'
     summary: |-
-      表示系列是否具有阴影的布尔值。
+      指定系列是否具有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -766,7 +766,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartSeries#smooth:member'
     summary: |-
-      该布尔值表示系列是否平滑。 仅适用于折线图和散点图。
+      指定系列是否平滑。 仅适用于折线图和散点图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
@@ -781,7 +781,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartSeries#splitType:member'
     summary: |-
-      返回或设置复合饼图或复合条饼图中两个分区的拆分方式。 读/写。
+      指定拆分复合饼图或复合条饼图条形图的两个部分的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: splitType
@@ -809,7 +809,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartSeries#trendlines:member'
     summary: |-
-      表示系列中趋势线的集合。 只读。
+      系列中趋势线的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: trendlines
@@ -824,7 +824,7 @@ items:
           - 'excel!Excel.ChartTrendlineCollection:class'
   - uid: 'excel!Excel.ChartSeries#varyByCategories:member'
     summary: |-
-      如果 Excel 为每个数据标记分配不同的颜色或图案，则为 True。 图表必须只包含一个系列。 读/写。
+      如此如果 Excel 为每个数据标记分配不同的颜色或图案。 图表必须只包含一个系列。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: varyByCategories
@@ -838,7 +838,7 @@ items:
         type:
           - boolean
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartSeries#axisGroup~0:complex'
     name: Excel.ChartAxisGroup | "Primary" | "Secondary"
@@ -881,7 +881,7 @@ references:
     name: Excel.ChartPointsCollection
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData:interface'
     name: Interfaces.ChartSeriesUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Range:class'
     name: Range
