--- a/docs/docs-ref-autogen/excel_online/excel/excel.chartlineformat.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.chartlineformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartLineFormat#clear:member(1)'
@@ -208,7 +208,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartLineFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -256,7 +256,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -275,7 +275,7 @@ references:
     name: Excel.Interfaces.ChartLineFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartLineFormatUpdateData:interface'
     name: Interfaces.ChartLineFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartLineFormatData:interface'
     name: Excel.Interfaces.ChartLineFormatData
