--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.applicationloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.applicationloadoptions.yml
@@ -16,7 +16,11 @@ items:
       - 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationEngineVersion:member'
       - 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationMode:member'
       - 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationState:member'
+      - 'excel!Excel.Interfaces.ApplicationLoadOptions#cultureInfo:member'
+      - 'excel!Excel.Interfaces.ApplicationLoadOptions#decimalSeparator:member'
       - 'excel!Excel.Interfaces.ApplicationLoadOptions#iterativeCalculation:member'
+      - 'excel!Excel.Interfaces.ApplicationLoadOptions#thousandsSeparator:member'
+      - 'excel!Excel.Interfaces.ApplicationLoadOptions#useSystemSeparators:member'
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
@@ -31,7 +35,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationEngineVersion:member'
     summary: |-
-      返回用于上次完整重新计算的 Excel 计算引擎版本。 只读。
+      返回用于上次完整重新计算的 Excel 计算引擎版本。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
@@ -61,7 +65,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationState:member'
     summary: |-
-      返回应用程序的计算状态。 有关详细信息，请参阅 Excel.CalculationState。 只读。
+      返回应用程序的计算状态。 有关详细信息，请参阅 Excel.CalculationState。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationState
@@ -71,6 +75,36 @@ items:
     type: property
     syntax:
       content: 'calculationState?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#cultureInfo:member'
+    summary: |-
+      基于当前系统区域性设置提供信息。 这包括区域性名称、数字格式和其他区域性相关设置。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: cultureInfo
+    fullName: cultureInfo
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'cultureInfo?: Excel.Interfaces.CultureInfoLoadOptions;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.CultureInfoLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#decimalSeparator:member'
+    summary: |-
+      获取用作数值的小数分隔符的字符串。 这是基于 Excel 的本地设置。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: decimalSeparator
+    fullName: decimalSeparator
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'decimalSeparator?: boolean;'
       return:
         type:
           - boolean
@@ -89,6 +123,38 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#thousandsSeparator:member'
+    summary: |-
+      获取一个字符串，用于将数字值的小数位数与小数的左边隔开。 这是基于 Excel 的本地设置。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: thousandsSeparator
+    fullName: thousandsSeparator
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'thousandsSeparator?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#useSystemSeparators:member'
+    summary: |-
+      指定是否启用 Excel 的系统分隔符。 系统分隔符包括小数分隔符和千位分隔符。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: useSystemSeparators
+    fullName: useSystemSeparators
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'useSystemSeparators?: boolean;'
+      return:
+        type:
+          - boolean
 references:
+  - uid: 'excel!Excel.Interfaces.CultureInfoLoadOptions:interface'
+    name: Excel.Interfaces.CultureInfoLoadOptions
   - uid: 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
     name: Excel.Interfaces.IterativeCalculationLoadOptions
