--- a/docs/docs-ref-autogen/visio/visio/visio.document.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.document.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.Document#application:member'
@@ -306,7 +306,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'visio!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'visio!Visio.Document#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -424,7 +424,7 @@ items:
         type:
           - 'visio!Visio.DocumentView:class'
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.Application:class'
     name: Visio.Application
@@ -440,7 +440,7 @@ references:
     name: OfficeExtension.EventHandlers<Visio.DataRefreshCompleteEventArgs>
     fullName: OfficeExtension.EventHandlers<Visio.DataRefreshCompleteEventArgs>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -454,7 +454,7 @@ references:
     name: OfficeExtension.EventHandlers<Visio.DocumentLoadCompleteEventArgs>
     fullName: OfficeExtension.EventHandlers<Visio.DocumentLoadCompleteEventArgs>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -468,7 +468,7 @@ references:
     name: OfficeExtension.EventHandlers<Visio.PageLoadCompleteEventArgs>
     fullName: OfficeExtension.EventHandlers<Visio.PageLoadCompleteEventArgs>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -482,7 +482,7 @@ references:
     name: OfficeExtension.EventHandlers<Visio.SelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Visio.SelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -496,7 +496,7 @@ references:
     name: OfficeExtension.EventHandlers<Visio.ShapeMouseEnterEventArgs>
     fullName: OfficeExtension.EventHandlers<Visio.ShapeMouseEnterEventArgs>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -510,7 +510,7 @@ references:
     name: OfficeExtension.EventHandlers<Visio.ShapeMouseLeaveEventArgs>
     fullName: OfficeExtension.EventHandlers<Visio.ShapeMouseLeaveEventArgs>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -524,7 +524,7 @@ references:
     name: Visio.PageCollection
   - uid: 'visio!Visio.Interfaces.DocumentUpdateData:interface'
     name: Interfaces.DocumentUpdateData
-  - uid: 'visio!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'visio!Visio.Interfaces.DocumentData:interface'
     name: Visio.Interfaces.DocumentData
